syntax = "proto3";

package PoeTradeMonitorProto;

service PartyManager {
  rpc Start (StartRequest) returns (StartReply) {}
  rpc Stop (StopRequest) returns (StopReply) {}
  rpc LeaveParty (LeavePartyRequest) returns (LeavePartyReply) {}
  rpc GetPartyMembers (GetPartyMembersRequest) returns (GetPartyMembersReply) {}
}


message StartRequest {
	string characterName = 1;
	string accountName = 2;
	int32 value = 3;
}

message StartReply {
	bool started = 1;
}

message StopRequest {
}

message StopReply {
	bool stopped = 1;
}

message LeavePartyRequest {
}

message LeavePartyReply {
}

message GetPartyMembersRequest {
}

message GetPartyMembersReply {
  repeated string partyMembers = 1;
}